changed title color to red

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1132,21 +1132,19 @@ a:hover {
 
 .intro-single .title-single-box .title-single {
   font-weight: 500;
-  /* font-size: 2.2rem; */
   font-size: 0.8rem;
 }
 
 @media (min-width: 768px) {
   .intro-single .title-single-box .title-single {
-    /* font-size: 2.1rem; */
     font-size: 0.7rem;
   }
 }
 
 @media (min-width: 992px) {
   .intro-single .title-single-box .title-single {
-    /* font-size: 2.5rem; */
-    font-size: 1.5rem;
+    color: red;
+    font-size: 0.5rem;
   }
 }
 
